--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "firebase": "^10.0.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.13.0",
-    "styled-components": "^5.3.11"
+    "react-spinners": "^0.13.8",
+    "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.16",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
